# NutrientNexus

./: .gitignore  extracted_pdf_text.txt
Nexus/: .gitignore  Dockerfile  README.md  doc.md  technical_reflection.md
Nexus/.devcontainer/: devcontainer.json
Nexus/src/: .gitignore
Nexus/src/my_tb3_world/: CMakeLists.txt  package.xml
Nexus/src/my_tb3_world/maps/: map.yaml
Nexus/src/my_tb3_world/worlds/: new_world.world
Nexus/src/my_turtlebot3_controller/: package.xml  setup.cfg  setup.py
tiebe/: .gitignore  README.md  flake.nix
tiebe/.sisyphus/: boulder.json
tiebe/.sisyphus/drafts/: nutrientnexus-poc.md
tiebe/.sisyphus/evidence/: task-1-build-success.txt  task-1-dependencies.txt  task-10-integration.txt  task-10-structure.txt  task-11-markdown-valid.txt  task-11-readme-check.txt  task-2-gazebo-load.txt  task-2-geometry.txt  task-3-bounds-valid.txt  task-3-yaml-valid.txt  task-4-node-start.txt  task-4-zone-logic.txt  task-5-sim-launch.txt  task-5-slam-map.txt  task-5-structure.txt  task-5-syntax.txt  task-6-structure.txt  task-6-syntax-valid.txt  task-7-params-check.txt  task-8-displays.txt  task-8-rviz-load.txt  task-9-coverage.txt  task-9-pytest.txt
tiebe/.sisyphus/plans/: nutrientnexus-week1-navigation.md
tiebe/.sisyphus/run-continuation/: ses_19b968065ffeyrmHWxLIVaylBR.json  ses_19c41f904ffe1PeaebB6dEHRFc.json
tiebe/docs/: TURTLEBOT3_OPERATIONS.md  cmaps.txt  main.tex
tiebe/docs/SimFiles/: Dockerfile  map.pgm  new_world.launch.py  setup.py
tiebe/nutrient_nexus_navigation/: package.xml  setup.cfg  setup.py
(+50 files in other folders)
