<?xml version="1.0"?>
<package format="3">
  <name>my_tb3_world</name>
  <version>0.0.1</version>
  <description>Custom worlds and launch files for TurtleBot3 + Gazebo (gz-sim)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
